# moz_genai

./: .gitignore  Cargo.toml  Makefile  README.md  README.txt  build.rs  ner.py  pages.txt  requirements.txt  sandman.txt  summarize.py
cpp/: CMakeLists.txt  main  main.cpp
output/: summary.h
python/: README.md  fine-tuned.py  requirements.txt
src/: lib.rs  main.rs
