[package]
name = "summary"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.23"

[dependencies]
anyhow = "1.0.75"
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main" , features = ["accelerate"]}
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main" }
hf-hub = "0.3.2"
memmap2 = "0.9.0"
serde_json = "1.0.108"
tokenizers = { version = "0.15.0", features = ["onig"] }
