[package]
name = "moz_genai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.23"

[dependencies]
anyhow = "1.0.75"
candle-core = "0.3.1"
candle-nn = "0.3.1"
candle-transformers = "0.3.1"
hf-hub = "0.3.2"
memmap2 = "0.9.0"
serde_json = "1.0.108"
tokenizers = { version = "0.15.0", features = ["onig"] }
