[package]
name = "moz_genai"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
description = "Inference toolkit"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.23"

[dependencies]
anyhow = "1.0"
memmap2 = "0.5"
serde_json = "1.0"

candle-core = "0.3.1"
candle-nn = "0.3.1"
candle-transformers = "0.3.1"
hf-hub = "0.3.2"
tokenizers = { version = "0.15.0", features = ["onig"] }
kuchiki = "0.8.1"
